--- a/src/components/NextEvent/NextEvent.css
+++ b/src/components/NextEvent/NextEvent.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: Poppins-Regular;
   src: url(../../assets/fonts/Poppins/Poppins-Regular.ttf);
@@ -9,10 +8,9 @@
   src: url(../../assets/fonts/Poppins/Poppins-Medium.ttf);
 }
 
-
 .tooltip {
   color: #fff !important;
-  background-color: #B51D44 !important;
+  background-color: #b51d44 !important;
 }
 
 .event-card {
@@ -22,14 +20,13 @@
   width: 250px;
   height: 250px;
   padding: 25px;
-  border: 1px solid var(--color-blue-red);
   border-radius: 5px;
-  overflow: auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transition: 500ms;
 }
 
-/* Largura da barra de rolagem */
-.event-card::-webkit-scrollbar {
-  width: 0px;
+.event-card:hover {
+  transform:scale(1.05);
 }
 
 .event-card__title {
@@ -44,6 +41,16 @@
   font-size: 1rem;
   text-align: center;
   margin-bottom: 25px;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.event-card__data {
+  font-family: Poppins-Regular;
+  font-size: 1rem;
+  text-align: center;
+  margin-bottom: 25px;
 }
 
 .event-card__connect-link {
@@ -53,8 +60,13 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
+  border-radius: 0.3rem;
+  transition: 0.5s;
 }
 
+.event-card__connect-link:hover {
+  background-color: rgb(235, 235, 235);
+}
 
 @media screen and (min-width: 992px) {
   .banner {
@@ -63,7 +75,6 @@
   }
 
   .events-box {
-    
     justify-content: flex-start;
     flex-direction: row;
     flex-wrap: wrap;
@@ -71,7 +82,7 @@
   }
 
   .event-card {
-    width: 220px;
-    height: 220px;
+    width: 245px;
+    height: 245px;
   }
 }
